[metadata]
name = PPPPP
version = 0.0.0
description = "Python PNG Pixel Position Poker"
author = aidnem
license = MIT
license_files =
    LICENSE
platforms = unix, linux, osx, cygwin, win32

classifiers =
    Programming Language :: Python :: 3

[options]
packages =
    ppppp


[options.entry_points]
console_scripts =
    ppppp = ppppp.ppppp:main
